Add html structure for calculator

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <div id="calculator-content">
+        <div id="display"></div>
+        <div id="button clear"></div>
+        <div id="buttons">
+            <div class="button seven"></div>
+            <div class="button eight"></div>
+            <div class="button nine"></div>
+            <div class="button division"></div>
+            <div class="button four"></div>
+            <div class="button five"></div>
+            <div class="button six"></div>
+            <div class="button multiplication"></div>
+            <div class="button one"></div>
+            <div class="button two"></div>
+            <div class="button three"></div>
+            <div class="button subtraction"></div>
+            <div class="button zero"></div>
+            <div class="button decimal"></div>
+            <div class="button equals"></div>
+            <div class="button addition"></div>
+        </div>
+    </div>
 </body>
 </html>
