--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <div id="display"></div>
         <div id="button clear"></div>
         <div id="buttons">
-            <div class="button seven"></div>
-            <div class="button eight"></div>
-            <div class="button nine"></div>
-            <div class="button division"></div>
-            <div class="button four"></div>
-            <div class="button five"></div>
-            <div class="button six"></div>
-            <div class="button multiplication"></div>
-            <div class="button one"></div>
-            <div class="button two"></div>
-            <div class="button three"></div>
-            <div class="button subtraction"></div>
-            <div class="button zero"></div>
-            <div class="button decimal"></div>
-            <div class="button equals"></div>
-            <div class="button addition"></div>
+            <div class="button seven">7</div>
+            <div class="button eight">8</div>
+            <div class="button nine">9</div>
+            <div class="button division">/</div>
+            <div class="button four">4</div>
+            <div class="button five">5</div>
+            <div class="button six">6</div>
+            <div class="button multiplication">x</div>
+            <div class="button one">1</div>
+            <div class="button two">2</div>
+            <div class="button three">3</div>
+            <div class="button subtraction">-</div>
+            <div class="button zero">0</div>
+            <div class="button decimal">.</div>
+            <div class="button equals">=</div>
+            <div class="button addition">+</div>
         </div>
     </div>
 </body>
