Add content for clear and display

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div id="calculator-content">
-        <div id="display"></div>
-        <div id="button clear"></div>
+        <div id="display">0</div>
+        <div id="button clear">clear</div>
         <div id="buttons">
             <div class="button seven">7</div>
             <div class="button eight">8</div>
