Add temporary labels to divs

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    <div id="calculator-content">
+<body>body
+    <div id="calculator-content">calculator-content
         <div id="display">0</div>
         <div id="button clear">clear</div>
         <div id="buttons">
