--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 <body>body
     <div id="calculator-content">calculator-content
         <div id="display">0</div>
-        <div id="button clear">clear</div>
+        <button id="button clear">clear</button>
         <div id="buttons">
-            <div class="button seven">7</div>
-            <div class="button eight">8</div>
-            <div class="button nine">9</div>
-            <div class="button division">/</div>
-            <div class="button four">4</div>
-            <div class="button five">5</div>
-            <div class="button six">6</div>
-            <div class="button multiplication">x</div>
-            <div class="button one">1</div>
-            <div class="button two">2</div>
-            <div class="button three">3</div>
-            <div class="button subtraction">-</div>
-            <div class="button zero">0</div>
-            <div class="button decimal">.</div>
-            <div class="button equals">=</div>
-            <div class="button addition">+</div>
+            <button class="button seven">7</button>
+            <button class="button eight">8</button>
+            <button class="button nine">9</button>
+            <button class="button division">/</button>
+            <button class="button four">4</button>
+            <button class="button five">5</button>
+            <button class="button six">6</button>
+            <button class="button multiplication">x</button>
+            <button class="button one">1</button>
+            <button class="button two">2</button>
+            <button class="button three">3</button>
+            <button class="button subtraction">-</button>
+            <button class="button zero">0</button>
+            <button class="button decimal">.</button>
+            <button class="button equals">=</button>
+            <button class="button addition">+</button>
         </div>
     </div>
 </body>
