Update calculator title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>body
-    <div id="calculator-content">calculator-content
+    <div id="calculator-content">Math Instruments T-800
         <div id="display">0</div>
         <button id="button clear">clear</button>
         <div id="buttons">
