--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <div id="display">0</div>
         <button id="button clear">clear</button>
         <div id="buttons">
-            <button class="button seven">7</button>
-            <button class="button eight">8</button>
-            <button class="button nine">9</button>
-            <button class="button division">/</button>
-            <button class="button four">4</button>
-            <button class="button five">5</button>
-            <button class="button six">6</button>
-            <button class="button multiplication">x</button>
-            <button class="button one">1</button>
-            <button class="button two">2</button>
-            <button class="button three">3</button>
-            <button class="button subtraction">-</button>
+            <button class="button number">7</button>
+            <button class="button number">8</button>
+            <button class="button number">9</button>
+            <button class="button division operation">/</button>
+            <button class="button number">4</button>
+            <button class="button number">5</button>
+            <button class="button number">6</button>
+            <button class="button multiplication operation">x</button>
+            <button class="button number">1</button>
+            <button class="button number">2</button>
+            <button class="button number">3</button>
+            <button class="button subtraction operation">-</button>
             <button class="button zero">0</button>
             <button class="button decimal">.</button>
             <button class="button equals">=</button>
-            <button class="button addition">+</button>
+            <button class="button addition operation">+</button>
         </div>
     </div>
 </body>
