Format clear button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>body
     <div id="calculator-content">Math Instruments T-800
         <div id="display">0</div>
-        <button id="button clear">clear</button>
+        <button id="clear-button">CLEAR</button>
         <div id="buttons">
             <button class="button number">7</button>
             <button class="button number">8</button>
