Format calculator display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>body
-    <div id="calculator-content">Math Instruments T-800
+    <div id="calculator-content">
+        <div id="calculator-name">Math Instruments T-800</div>
         <div id="display">0</div>
         <button id="clear-button">CLEAR</button>
         <div id="buttons">
