--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <div id="display">0</div>
         <button id="clear-button">CLEAR</button>
         <div id="buttons">
-            <button class="button number">7</button>
-            <button class="button number">8</button>
-            <button class="button number">9</button>
-            <button class="button division operation">/</button>
-            <button class="button number">4</button>
-            <button class="button number">5</button>
-            <button class="button number">6</button>
-            <button class="button multiplication operation">x</button>
-            <button class="button number">1</button>
-            <button class="button number">2</button>
-            <button class="button number">3</button>
-            <button class="button subtraction operation">-</button>
-            <button class="button zero">0</button>
-            <button class="button decimal">.</button>
-            <button class="button equals">=</button>
-            <button class="button addition operation">+</button>
+            <button class="button number" id="7">7</button>
+            <button class="button number" id="8">8</button>
+            <button class="button number" id="9">9</button>
+            <button class="button division operation" id="/">/</button>
+            <button class="button number" id="4">4</button>
+            <button class="button number" id="5">5</button>
+            <button class="button number" id="6">6</button>
+            <button class="button multiplication operation" id="*">x</button>
+            <button class="button number" id="1">1</button>
+            <button class="button number" id="2">2</button>
+            <button class="button number" id="3">3</button>
+            <button class="button subtraction operation" id="-">-</button>
+            <button class="button zero" id="0">0</button>
+            <button class="button decimal" id=".">.</button>
+            <button class="button equals" id="=">=</button>
+            <button class="button addition operation" id="+">+</button>
         </div>
     </div>
 </body>
