--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>body
     <div id="calculator-content">
         <div id="calculator-name">Math Instruments T-800</div>
-        <div id="display">0</div>
+        <div id="display"></div>
         <button id="clear-button">CLEAR</button>
         <div id="buttons">
             <button class="button number" id="7">7</button>
