--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             <button class="button number" id="7">7</button>
             <button class="button number" id="8">8</button>
             <button class="button number" id="9">9</button>
-            <button class="button division operation" id="/">/</button>
+            <button class="button operation" id="division">/</button>
             <button class="button number" id="4">4</button>
             <button class="button number" id="5">5</button>
             <button class="button number" id="6">6</button>
-            <button class="button multiplication operation" id="*">x</button>
+            <button class="button operation" id="multiplication">x</button>
             <button class="button number" id="1">1</button>
             <button class="button number" id="2">2</button>
             <button class="button number" id="3">3</button>
-            <button class="button subtraction operation" id="-">-</button>
+            <button class="button operation" id="subtraction">-</button>
             <button class="button zero" id="0">0</button>
             <button class="button decimal" id=".">.</button>
             <button class="button equals" id="=">=</button>
-            <button class="button addition operation" id="+">+</button>
+            <button class="button operation" id="addition">+</button>
         </div>
     </div>
 </body>
