--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button class="button number" id="2">2</button>
             <button class="button number" id="3">3</button>
             <button class="button operation" id="subtraction">-</button>
-            <button class="button zero" id="0">0</button>
+            <button class="button number" id="0">0</button>
             <button class="button decimal" id=".">.</button>
             <button class="button equals" id="=">=</button>
             <button class="button operation" id="addition">+</button>
